[build-system]
requires = ["setuptools", "wheel"]

[tool.cibuildwheel]
skip = "*musllinux_aarch64 *musllinux_ppc64le"

archs = ["auto"]
build-frontend = "default"
dependency-versions = "pinned"
environment = {LIBGIT2_VERSION="1.9.0", LIBSSH2_VERSION="1.11.1", OPENSSL_VERSION="3.2.3", LIBGIT2="/project/ci"}

before-all = "sh build.sh"

[tool.cibuildwheel.linux]
repair-wheel-command = "LD_LIBRARY_PATH=/project/ci/lib64 auditwheel repair -w {dest_dir} {wheel}"
archs = ["x86_64", "aarch64", "ppc64le"]

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
repair-wheel-command = "LD_LIBRARY_PATH=/project/ci/lib auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
archs = ["universal2"]
repair-wheel-command = "DYLD_LIBRARY_PATH=/Users/runner/work/pygit2/pygit2/ci/lib delocate-wheel --require-archs {delocate_archs} -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos.environment]
LIBGIT2_VERSION = "1.9.0"
LIBSSH2_VERSION = "1.11.1"
OPENSSL_VERSION = "3.2.3"
LIBGIT2 = "/Users/runner/work/pygit2/pygit2/ci"
CFLAGS = "-I/usr/local/include"
LDFLAGS = "-L/usr/local/lib -lz"

[tool.ruff]
target-version = "py310"  # oldest supported Python version
fix = true
extend-exclude = [
    ".cache",
    ".coverage",
    "build",
    "venv*",
]

[tool.ruff.format]
quote-style = "single"
