[build-system]
requires = ["setuptools", "wheel"]

[tool.cibuildwheel]
enable = ["pypy"]
skip = "*musllinux_ppc64le"

archs = ["native"]
build-frontend = "default"
dependency-versions = "pinned"
environment = {LIBGIT2_VERSION="1.9.2", LIBSSH2_VERSION="1.11.1", OPENSSL_VERSION="3.5.4", LIBGIT2="/project/ci"}

before-all = "sh build.sh"
test-command = "pytest"
test-sources = ["test", "pytest.ini"]
before-test = "pip install -r {project}/requirements-test.txt"
# Will avoid testing on emulated architectures (specifically ppc64le)
# Also, skip testing pypy on macOS arm64 due issue with bootstrapping git config paths
# see https://github.com/libgit2/pygit2/issues/1442
test-skip = "*-*linux_ppc64le pp*-macosx_arm64"

[tool.cibuildwheel.linux]
repair-wheel-command = "LD_LIBRARY_PATH=/project/ci/lib64 auditwheel repair -w {dest_dir} {wheel}"

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
repair-wheel-command = "LD_LIBRARY_PATH=/project/ci/lib auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
environment = {LIBGIT2_VERSION="1.9.2", LIBSSH2_VERSION="1.11.1", OPENSSL_VERSION="3.5.4", LIBGIT2="/Users/runner/work/pygit2/pygit2/ci"}
repair-wheel-command = "DYLD_LIBRARY_PATH=/Users/runner/work/pygit2/pygit2/ci/lib delocate-wheel --require-archs {delocate_archs} -w {dest_dir} {wheel}"

[tool.cibuildwheel.windows]
environment.LIBGIT2_SRC = "build/libgit2_src"
environment.LIBGIT2_VERSION = "1.9.2"
before-all = "powershell -File build.ps1"

[[tool.cibuildwheel.overrides]]
select="*-win_amd64"
inherit.environment="append"
environment.CMAKE_GENERATOR = "Visual Studio 17 2022"
environment.CMAKE_GENERATOR_PLATFORM = "x64"
environment.CMAKE_INSTALL_PREFIX = "C:/libgit2_install_x86_64"
environment.LIBGIT2 = "C:/libgit2_install_x86_64"

[[tool.cibuildwheel.overrides]]
select="*-win32"
inherit.environment="append"
environment.CMAKE_GENERATOR = "Visual Studio 17 2022"
environment.CMAKE_GENERATOR_PLATFORM = "Win32"
environment.CMAKE_INSTALL_PREFIX = "C:/libgit2_install_x86"
environment.LIBGIT2 = "C:/libgit2_install_x86"

[[tool.cibuildwheel.overrides]]
select="*-win_arm64"
inherit.environment="append"
environment.CMAKE_GENERATOR = "Visual Studio 17 2022"
environment.CMAKE_GENERATOR_PLATFORM = "ARM64"
environment.CMAKE_INSTALL_PREFIX = "C:/libgit2_install_arm64"
environment.LIBGIT2 = "C:/libgit2_install_arm64"

[tool.ruff]
extend-exclude = [ ".cache", ".coverage", "build", "site-packages", "venv*"]
target-version = "py311"  # oldest supported Python version

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP035", "UP007"]

[tool.ruff.format]
quote-style = "single"

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git*'
check-hidden = true
# ignore-regex = ''
ignore-words-list = 'devault,claus'
